# MoscaBranca

./: Codigo.cpp  ImagemSaida  README.md  a.out  codigoSegmentacao.cpp
Apresentação/: Neues Textdokument.txt  Seminario.aux  Seminario.nav  Seminario.out  Seminario.tex  Seminario.tex.n11192  Seminario.toc  Teste_porta2.m  Untitled2.m
Parte Escrita/: Bibliografia,bib  TCC.aux  TCC.tex  TCC.toc  abntex2-modelo-include-comandos.aux  abntex2-modelo-trabalho-academico.aux  abntex2-modelo-trabalho-academico.tex  abntex2-modelo-trabalho-academico.toc
Segmentacao/: Makefile  cmake_install.cmake
Segmentacao/skinSegmentation/: CMakeLists.txt  README.txt
Segmentacao/skinSegmentation/src/: skinSegmentation.cpp
Trabalho teorico TCC/: compilar.bash
Trabalho teorico TCC/Apresentação TCC1/: Knn.htm  Neues Textdokument.txt  Seminario.tex.n11192  Teste_porta2.m  Untitled2.m
Trabalho teorico TCC/Parte Escrita/: TCC.tex
Trabalho teorico TCC/Segmentacao/: CMakeCache.txt
Trabalho teorico TCC/Segmentacao/skinSegmentation/data/: config.xml
Trabalho teorico TCC/Segmentacao/skinSegmentation/src/: compilar.bash  skinSegmentation.cpp
